--- a/package.json
+++ b/package.json
@@ -27,5 +27,13 @@
     "mysql": "^2.18.1",
     "systeminformation": "^5.9.4",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-jsonc": "^1.7.0",
+    "eslint-plugin-markdown": "^2.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint-plugin-unicorn": "^36.0.0"
   }
 }
