--- a/config example/config.json
+++ b/config example/config.json
@@ -1,19 +1,19 @@
 
 {
-    "prefix": "Your Prefix Here",
-    "token": "Token for your bot https://discord.com/developers/applications",
-    "ownerID": ["ownerid1", "ownerid2 if needed"],
-    "dmchannelID": "channel all dms to the bot will be sent to",
-    "dmattachmentID": "channel all pictures from dms will go to",
-    "AddRemoveLogs": "channel that will log when the bot is added / removed from a guild",
-    "mysqlhost": "mysql database ip",
-    "mysqluser": "mysql database username",
-    "mysqlpass": "mysql database password",
-    "mysqlDB": "mysql database name",
-    "LAVA_HOST": "Lavalink server ip",
-    "LAVA_PORT": "lavalink server port",
-    "LAVA_PASS": "lavalink server password",
-    "SpotifyID": "spotify application id",
-    "SpotifySecret": "spotify application secret",
-    "embedColor": "default embed color i guess idk"
+	prefix: "Your Prefix Here",
+	token: "Token for your bot https://discord.com/developers/applications",
+	ownerID: ["ownerid1", "ownerid2 if needed"],
+	dmchannelID: "channel all dms to the bot will be sent to",
+	dmattachmentID: "channel all pictures from dms will go to",
+	AddRemoveLogs: "channel that will log when the bot is added / removed from a guild",
+	mysqlhost: "mysql database ip",
+	mysqluser: "mysql database username",
+	mysqlpass: "mysql database password",
+	mysqlDB: "mysql database name",
+	LAVA_HOST: "Lavalink server ip",
+	LAVA_PORT: "lavalink server port",
+	LAVA_PASS: "lavalink server password",
+	SpotifyID: "spotify application id",
+	SpotifySecret: "spotify application secret",
+	embedColor: "default embed color i guess idk"
 }
