--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-	name: "shoto",
-	version: "1.0.0",
-	description: "Shoto Discord Bot ",
-	main: "index.js",
-	scripts: {
-		test: "echo \"Error: no test specified\" && exit 1"
+	"name": "shoto",
+	"version": "1.0.0",
+	"description": "Shoto Discord Bot ",
+	"main": "index.js",
+	"scripts": {
+	  "test": "echo \"Error: no test specified\" && exit 1"
 	},
-	repository: {
-		type: "git",
-		url: "git+https://github.com/AkiraDevelopment/Shoto.git"
+	"repository": {
+	  "type": "git",
+	  "url": "git+https://github.com/AkiraDevelopment/Shoto.git"
 	},
-	author: "AkiraDev/Oli",
-	license: "MIT",
-	bugs: {
-		url: "https://github.com/AkiraDevelopment/Shoto/issues"
+	"author": "AkiraDev/Oli",
+	"license": "MIT",
+	"bugs": {
+	  "url": "https://github.com/AkiraDevelopment/Shoto/issues"
 	},
-	homepage: "https://github.com/AkiraDevelopment/Shoto#readme",
-	dependencies: {
-		canvas: "^2.8.0",
-		"discord.js": "^13.2.0",
-		"erela.js": "^2.3.3",
-		"erela.js-spotify": "^1.2.0",
-		hastebin: "^0.2.1",
-		moment: "^2.29.1",
-		"moment-duration-format": "^2.3.2",
-		mysql: "^2.18.1",
-		systeminformation: "^5.9.4",
-		winston: "^3.3.3"
+	"homepage": "https://github.com/AkiraDevelopment/Shoto#readme",
+	"dependencies": {
+	  "canvas": "^2.8.0",
+	  "discord.js": "^13.2.0",
+	  "erela.js": "^2.3.3",
+	  "erela.js-spotify": "^1.2.0",
+	  "hastebin": "^0.2.1",
+	  "moment": "^2.29.1",
+	  "moment-duration-format": "^2.3.2",
+	  "mysql": "^2.18.1",
+	  "systeminformation": "^5.9.4",
+	  "winston": "^3.3.3"
 	},
-	devDependencies: {
-		eslint: "^7.32.0",
-		"eslint-plugin-jsonc": "^1.7.0",
-		"eslint-plugin-markdown": "^2.2.1",
-		"eslint-plugin-security": "^1.4.0",
-		"eslint-plugin-sonarjs": "^0.10.0",
-		"eslint-plugin-unicorn": "^36.0.0"
+	"devDependencies": {
+	  "eslint": "^7.32.0",
+	  "eslint-plugin-jsonc": "^1.7.0",
+	  "eslint-plugin-markdown": "^2.2.1",
+	  "eslint-plugin-security": "^1.4.0",
+	  "eslint-plugin-sonarjs": "^0.10.0",
+	  "eslint-plugin-unicorn": "^36.0.0"
 	}
-}
+  }
