--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"moment": "^2.29.1",
 		"moment-duration-format": "^2.3.2",
 		"mysql": "^2.18.1",
+		"statcord.js": "^3.3.0",
 		"systeminformation": "^5.9.4",
 		"winston": "^3.3.3"
 	},
