--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
 		"canvas": "^2.8.0",
 		"discord.js": "^13.2.0",
 		"erela.js": "^2.3.3",
+		"erela.js-apple": "^1.2.6",
 		"erela.js-spotify": "^1.2.0",
 		"express": "^4.17.1",
 		"hastebin": "^0.2.1",
+		"lavasfy": "^2.3.0",
 		"moment": "^2.29.1",
 		"moment-duration-format": "^2.3.2",
 		"mysql": "^2.18.1",
