--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"discord.js": "^13.2.0",
 		"erela.js": "^2.3.3",
 		"erela.js-apple": "^1.2.6",
+		"erela.js-deezer": "^1.0.7",
 		"erela.js-spotify": "^1.2.0",
 		"express": "^4.17.1",
 		"hastebin": "^0.2.1",
