--- a/config example/config.json
+++ b/config example/config.json
@@ -1,30 +1,34 @@
 {
-	"prefix": "Your Prefix Here",
-	"token": "Token for your bot https://discord.com/developers/applications",
-	"ownerID": ["ownerid1", "ownerid2 if needed"],
-	"supportServerID": "740705740221841450",
-	"dmchannelID": "channel all dms to the bot will be sent to",
-	"errorChannelID": "channel errors in commands will be sent to",
-	"AddRemoveLogs": "channel that will log when the bot is added / removed from a guild",
-	"mysqlhost": "mysql database ip",
-	"mysqluser": "mysql database username",
-	"mysqlpass": "mysql database password",
-	"mysqlDB": "mysql database name",
-	"LAVA_HOST": "Lavalink server ip",
-	"LAVA_PORT": "lavalink server port",
-	"LAVA_PASS": "lavalink server password",
-	"SpotifyID": "spotify application id",
-	"SpotifySecret": "spotify application secret",
-	"embedColor": "default embed color i guess idk",
-	"nodes": [
-		{
-		  "host": "host url",
-		  "port": 1,
-		  "password": "password",
-		  "identifier": "lavamusic",
-		  "retryAmount": 3,
-		  "retryDelay": 3000,
-		  "secure": false 
-		}
-	  ]
+	"prefix": "PREFIX",
+	"token": "TOKEN",
+	"topgg_webhook_auth": "WEBHOOK_AUTH",
+	"donatebot_webhook_auth": "WEBHOOK_AUTH",
+	"statcord_key": "API_KEY",
+	"webhook_port": "PORT",
+	"websocket_port": "PORT",
+	"ownerID": ["USERID1", "USERID2"],
+	"supportServerID": "SERVERID",
+	"dmchannelID": "CHANNELID",
+	"errorChannelID": "CHANNELID",
+	"donorLogChannel": "CHANNELID",
+	"AddRemoveLogs": "CHANNELID",
+	"votechannel": "CHANNELID",
+	"donorChannel": "CHANNELID",
+	"logChannel": "CHANNELID",
+	"mysqlhost": "HOST",
+	"mysqluser": "USER",
+	"mysqlpass": "PASSWORD",
+	"mysqlDB": "DATABASE",
+	"SpotifyID": "CLIENTID",
+	"SpotifySecret": "SECRET",
+	"embedColor": "HEXCODE",
+    "nodes": [{
+        "host": "HOST",
+        "port": "PORT",
+        "password": "PASSWORD",
+        "identifier": "IDENTIFIER",
+        "retryAmount": "RETRYAMOUNT",
+        "retryDelay": "RETRYDELAY",
+        "secure": "SECURE" 
+      }]
 }
